--- a/dialog.ui
+++ b/dialog.ui
@@ -63,7 +63,7 @@
    <property name="geometry">
     <rect>
      <x>300</x>
-     <y>220</y>
+     <y>190</y>
      <width>98</width>
      <height>27</height>
     </rect>
@@ -76,13 +76,26 @@
    <property name="geometry">
     <rect>
      <x>300</x>
-     <y>250</y>
+     <y>220</y>
      <width>98</width>
      <height>27</height>
     </rect>
    </property>
    <property name="text">
     <string>put</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_3">
+   <property name="geometry">
+    <rect>
+     <x>300</x>
+     <y>250</y>
+     <width>98</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>stop</string>
    </property>
   </widget>
  </widget>
